# origami

./: .gitignore  Cargo.toml  README.md
demo/: Cargo.toml
demo/src/: main.rs
demo/src/window/: mod.rs  window.blp
demo/src/window/gradient_bg/: gradient_bg.blp  mod.rs
demo/src/window/group/: group.blp  mod.rs
demo/src/window/picture_group/: mod.rs  picture_group.blp
demo/src/window/simple_pages/: loading_indicator.blp  mod.rs  wheel.blp
demo/src/window/spoiler/: mod.rs  spoiler.blp
gallery/: Cargo.toml
origami/: Cargo.toml
origami-demo/: .gitignore  Cargo.toml  meson.build  meson_options.txt
origami-demo/build-aux/: com.github.paper_plane_developers.OrigamiDemo.Devel.json
origami-demo/data/: com.github.paper_plane_developers.OrigamiDemo.desktop.in.in  com.github.paper_plane_developers.OrigamiDemo.gschema.xml.in  com.github.paper_plane_developers.OrigamiDemo.metainfo.xml.in.in  meson.build
origami-demo/po/: POTFILES.in
origami-demo/src/: application.rs  main.rs  meson.build
origami-demo/src/window/: mod.rs  shortcuts.ui  window.blp
origami-demo/src/window/loading_indicator/: loading_indicator.blp  mod.rs
origami/src/: lib.rs  styles-dark.css  styles.css
origami/src/gradient_bg/: mod.rs  software_gradient.rs
origami/src/group/: animated.rs  child_iter.rs  default.rs  mod.rs  shared.rs
origami/src/loading_indicator/: mod.rs
origami/src/shimmer_effect/: mod.rs
origami/src/spoiler_overlay/: blur_shader.frag  mod.rs
origami/src/traits/: lerp.rs  mod.rs
origami/src/wheel/: formatter.rs  mod.rs  range_model.rs  section.rs
(+16 files in other folders)
