[package]
name = "origami-demo"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
adw = { version = "0.5", package = "libadwaita", features = ["v1_4"] }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.7", package = "gtk4", features = ["blueprint", "v4_10"] }
ori = { path = "../origami", package = "origami" }
tracing = "0.1.37"
tracing-subscriber = "0.3"
