[package]
name = "origami"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.7", package = "libadwaita" }
gtk = { version = "0.9", package = "gtk4", features = ["v4_16"] }
log = "0.4"
